[AWS] Spring 프로젝트의 AWS 설정